--- a/exercicios_e_desafios/27-09/ExercicioListaRicardoClaro.html
+++ b/exercicios_e_desafios/27-09/ExercicioListaRicardoClaro.html
@@ -107,7 +107,7 @@
             <br>
             <figure>
                 <img src="0_GN6C6Hbqe3m2LEgG.jpg" alt="Ue" width="960" class="center">
-                <figcaption>Codificação HTML e CSS (?) 🤔 fonte: https://miro.medium.com/max/1400/0*GN6C6Hbqe3m2LEgG
+                <figcaption>Codificação HTML e CSS (?) 🤔 fonte: <a href="https://levelup.gitconnected.com/basic-frontend-knowledge-737702051bd8">Basic Frontend Knowledge — HTML, CSS, JS</a>
                 </figcaption>
             </figure>
 
