--- a/exercicios_e_desafios/27-09/ExercicioListaRicardoClaro.html
+++ b/exercicios_e_desafios/27-09/ExercicioListaRicardoClaro.html
@@ -96,12 +96,14 @@
 
             <br>
             <div class="codeDiv">
+                <code>
                 <pre>
                         &ltfigure&gt
                             &ltimg src="imagem.jpg" alt="Minha Figura"&gt
                             &ltfigcaption&gtInformações da Figura&lt/figcaption&gt
                         &lt/figure&gt
                     </pre>
+                </code>
 
             </div>
             <br>
